<resources>
	<string name="app_name">Budget</string>
	<string name="New_Income">New Income</string>
	<string name="New_Expense">New Expense</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="action_settings">Settings</string>

	<string name="table_name_income">Name</string>
	<string name="table_money_income">Income</string>

	<string name="table_product_expense">Product</string>
	<string name="table_amount_expense">Amount</string>
	<string name="table_money_expense">Expense</string>

	<string name="table_month_balance">Month</string>
	<string name="table_balance_balance">Balance</string>

	<string name="table_expense_refueling">Expense</string>
	<string name="table_fuel_refueling">Fuel</string>
	<string name="table_date_refueling">Date</string>

	<string name="toolbar_refueling_expense">Expense</string>
	<string name="toolbar_refueling_graph">Stats</string>
	<string name="toolbar_refueling_setting">Setting</string>

	<string name="previous_month">previous month</string>

	<string name="menu_income">Income</string>
	<string name="menu_expense">Expense</string>
	<string name="menu_balance">Balance</string>
	<string name="menu_refueling">Refueling</string>
	<string name="addIncome">Add</string>
	<string name="moneyIncome">Money +</string>
	<string name="nameIncome">Name</string>
	<string name="moneyExpense">Money -</string>
	<string name="productExpense">Product</string>
	<string name="title_activity_settings">Settings</string>

	<string name="title_month_january">January</string>
	<string name="title_month_february">February</string>
	<string name="title_month_march">March</string>
	<string name="title_month_april">April</string>
	<string name="title_month_may">May</string>
	<string name="title_month_june">June</string>
	<string name="title_month_july">July</string>
	<string name="title_month_august">August</string>
	<string name="title_month_september">September</string>
	<string name="title_month_october">October</string>
	<string name="title_month_november">November</string>
	<string name="title_month_december">December</string>

	<string name="et_name_product"></string>
	<string name="et_money_product"></string>
	<string name="DataTables">Data Tables</string>
	<string name="ButtonClearDataTables">Clear Data Tables</string>

	<string name="fuel">Fuel</string>
	<string name="price">Price</string>
	<string name="r_l">rub/litr</string>
	<string name="edit_refuelsettings">edit</string>
	<string name="accept_refuelsettings">accept</string>
	<string name="litres">l</string>
	<string name="graph_stats_costs">Costs</string>
	<string name="graph_stats_litres">Litres</string>
	<string name="graph_stats_refuelings">Refuelings</string>

	<string name="analyticalPieChartAmount">Total</string>
	<string name="coming_soon">...</string>
	<string name="back">back</string>
	<string name="graph_balance">Analyze</string>
	<string name="analyze_income">analyze income</string>
	<string name="analyze_expense">analyze expense</string>
	<string name="analyze_balance">analyze balance</string>
	<string name="fullingincomes">Fulling Incomes</string>
	<string name="fulling_expense">Fulling Expense</string>

	<string-array name="analyticalPieChartColorArray">
		<item>#E480F4</item>
		<item>#6CC3F3</item>
		<item>#7167ED</item>
		<item>#D9455F</item>
		<item>#6054EA</item>
	</string-array>

	<string-array name="APCColorArrayBalance">
		<item>#CCF600</item>
		<item>#FF0000</item>
	</string-array>

	<string-array name="APCColorArrayIncome">
		<item>#DC143C</item>
		<item>#FF0000</item>
		<item>#B22222</item>
		<item>#8B0000</item>
		<item>#FF69B4</item>
		<item>#FF1493</item>
		<item>#C71585</item>
		<item>#FF4500</item>
		<item>#FF8C00</item>
		<item>#FFA500</item>
		<item>#FFD700</item>
		<item>#FFFF00</item>
		<item>#DA70D6</item>
		<item>#FF00FF</item>
		<item>#8A2BE2</item>
		<item>#9400D3</item>
		<item>#9932CC</item>
		<item>#8B008B</item>
		<item>#800080</item>
		<item>#4B0082</item>
		<item>#ADFF2F</item>
		<item>#7FFF00</item>
		<item>#7CFC00</item>
	</string-array>
</resources>
