<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.expense.NewExpense">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView android:textSize="22sp"
                  android:text="@string/productExpense"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textAlignment="center"
                  android:paddingVertical="10sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:text="@string/et_name_product"
                android:ems="10"
                android:id="@+id/productExpense"
                android:textAlignment="center"
        />
        <TextView android:textSize="22sp"
                  android:text="@string/moneyExpense"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:textAlignment="center"
                  android:paddingVertical="10sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="text"
                android:text="@string/et_money_product"
                android:ems="10"
                android:id="@+id/moneyExpense"
                android:textAlignment="center"
        />
        <Button android:text="@string/addIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="AddExpense"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>