<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
												   xmlns:tools="http://schemas.android.com/tools"
												   xmlns:app="http://schemas.android.com/apk/res-auto"
												   android:layout_width="match_parent"
												   android:layout_height="match_parent"
												   tools:context=".ui.refueling.RefuelingSettingsFragment"
												   android:id="@+id/frameLayout"
												   android:background="@color/ffbf40">
	<GridLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:columnCount="3"
		android:rowCount="5"
	>
		<TextView
			android:layout_marginStart="20dp"
			android:padding="8dp"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:layout_column="0"
			android:layout_row="0"
			android:layout_marginTop="20dp"
			android:textAlignment="center"
			android:text="@string/fuel"
			android:textSize="24sp"
		/>
		<Spinner
			android:id="@+id/spinnerFuels"
			android:layout_column="1"
			android:layout_row="0"
			android:layout_width="110dp"
			android:layout_height="47dp"
			android:layout_marginTop="20dp"
			android:theme="@android:style/Theme.Holo.Light.NoActionBar"
			android:popupBackground="@color/ff7400"
			android:padding="8dp"
			android:visibility="invisible"
		/>
		<TextView
			android:id="@+id/fuelView"
			android:padding="8dp"
			android:layout_width="110dp"
			android:layout_height="47dp"
			android:layout_column="1"
			android:layout_row="0"
			android:layout_marginTop="20dp"
			android:textAlignment="center"
			android:textSize="24sp"
		/>
		<TextView
			android:layout_marginStart="20dp"
			android:padding="8dp"
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:layout_column="0"
			android:layout_row="1"
			android:textSize="24sp"
			android:text="@string/price"
		/>
		<EditText
			android:id="@+id/editPrice"
			android:layout_width="100dp"
			android:padding="8dp"
			android:layout_height="50dp"
			android:autofillHints="price"
			android:layout_row="1"
			android:layout_column="1"
			android:inputType="numberDecimal"
			tools:ignore="LabelFor"
			android:background="@drawable/line_box"
			android:visibility="invisible"
		/>
		<TextView
			android:id="@+id/priceView"
			android:layout_width="100dp"
			android:padding="8dp"
			android:layout_height="50dp"
			android:layout_row="1"
			android:layout_column="1"
			android:textAlignment="center"
			android:textSize="24sp"
		/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="50dp"
			android:layout_row="1"
			android:layout_column="2"
			android:textSize="24sp"
			android:text="@string/r_l"
			android:padding="8dp"
		/>
		<Button
			android:backgroundTint="#FFAA00"
			android:textColor="@color/black"
			android:layout_marginStart="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_row="3"
			android:layout_column="0"
			android:layout_columnSpan="2"
			android:layout_gravity="fill"
			android:padding="8dp"
			android:text="@string/edit_refuelsettings"
			android:id="@+id/editButton"
		/>
		<Button
			android:backgroundTint="#FFAA00"
			android:textColor="@color/black"
			android:layout_marginStart="20dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_row="3"
			android:layout_column="0"
			android:layout_columnSpan="2"
			android:layout_gravity="fill"
			android:padding="8dp"
			android:text="@string/accept_refuelsettings"
			android:visibility="invisible"
			android:id="@+id/acceptButton"
		/>

	</GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>