<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.income.NewIncome"
        android:background="@color/ffbf40">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:layout_marginTop="25dp">
        <TextView android:textSize="22sp"
                  android:text="@string/nameIncome"
                  android:layout_width="match_parent"
                  android:layout_height="50sp"
                  android:textAlignment="center"
                  android:paddingVertical="10sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/nameIncome"
                android:textAlignment="center"
        />
        <TextView android:textSize="22sp"
                  android:text="@string/moneyIncome"
                  android:layout_width="match_parent"
                  android:layout_height="50sp"
                  android:textAlignment="center"
                  android:paddingVertical="10sp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:text=""
                android:ems="10"
                android:id="@+id/moneyIncome"
                android:textAlignment="center"
                android:inputType="number"
        />
        <Button android:text="@string/addIncome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="AddIncome"
                android:backgroundTint="#FFAA00"
                android:textColor="@color/black"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>