<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:app="http://schemas.android.com/apk/res-auto"
			 xmlns:tools="http://schemas.android.com/tools"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 tools:context=".ui.refueling.RefuelingFragment"
			 android:background="@color/ffbf40"
			 android:id="@+id/frame"
			 app:layoutDescription="@xml/fragment_refueling_scene">
	<FrameLayout
		android:id="@+id/child_fragment_container"
		android:layout_width="match_parent"
		android:layout_height="614dp">

	</FrameLayout>
	<androidx.appcompat.widget.Toolbar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@color/ff7400"
		android:theme="?attr/actionBarTheme"
		android:minHeight="?attr/actionBarSize"
		android:id="@+id/toolbar2"
		app:layout_constraintEnd_toStartOf="@+id/scrollView2"
		android:layout_gravity="bottom"
		android:layout_marginBottom="40dp">
		<GridLayout android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_marginEnd="10dp">
			<Button
				android:id="@+id/butt_expense"
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				android:text="@string/toolbar_refueling_expense"
				android:backgroundTint="#FFAA00"
				android:textColor="@color/black"
				android:onClick="onClick"
				tools:layout_conversion_absoluteHeight="48dp"
				tools:layout_editor_absoluteY="639dp"
				tools:layout_editor_absoluteX="16dp"
				tools:layout_conversion_absoluteWidth="101dp"/>
			<Button
				android:id="@+id/butt_graph"
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				android:text="@string/toolbar_refueling_graph"
				android:backgroundTint="#FFAA00"
				android:textColor="@color/black"
				android:onClick="onClick"
				tools:layout_conversion_absoluteHeight="48dp"
				tools:layout_editor_absoluteY="639dp"
				tools:layout_editor_absoluteX="157dp"
				tools:layout_conversion_absoluteWidth="88dp"
				android:layout_gravity="center_horizontal"/>
			<Button
				android:id="@+id/butt_setting"
				android:layout_width="wrap_content"
				android:layout_height="40dp"
				android:text="@string/toolbar_refueling_setting"
				tools:ignore="RtlHardcoded"
				android:backgroundTint="#FFAA00"
				android:textColor="@color/black"
				android:onClick="onClick"
				tools:layout_conversion_absoluteHeight="48dp"
				tools:layout_editor_absoluteY="639dp"
				tools:layout_editor_absoluteX="303dp"
				tools:layout_conversion_absoluteWidth="98dp"/>
		</GridLayout>
	</androidx.appcompat.widget.Toolbar>
</FrameLayout>