<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
			 xmlns:tools="http://schemas.android.com/tools"
			 android:layout_width="match_parent"
			 android:layout_height="match_parent"
			 tools:context=".ui.refueling.RefuelingGraphFragment"
			 android:background="@color/ffbf40">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/ffbf40">
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="300dp">
		</androidx.constraintlayout.widget.ConstraintLayout>
		<TableLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		>

			<TableRow android:layout_width="match_parent"
					  android:layout_height="match_parent"
					  android:gravity="center"
					  android:layout_marginBottom="13dp"
			>
				<TextView
					android:background="@drawable/stats_text"
					android:textSize="24sp"
					android:text="@string/graph_stats_costs"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:textAlignment="center"
				/>
				<Space/>
				<TextView
					android:background="@drawable/full_stats"
					android:textSize="24sp"
					android:textAlignment="center"
					android:id="@+id/stats_costs"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
			</TableRow>
			<TableRow android:layout_width="match_parent"
					  android:layout_height="match_parent"
					  android:gravity="center"
					  android:layout_marginTop="13dp"
					  android:layout_marginBottom="13dp"
			>
				<TextView
					android:background="@drawable/stats_text"
					android:textSize="24sp"
					android:text="@string/graph_stats_litres"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:textAlignment="center"
				/>
				<Space/>
				<TextView
					android:background="@drawable/full_stats"
					android:textSize="24sp"
					android:textAlignment="center"
					android:id="@+id/stats_litres"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
			</TableRow>
			<TableRow android:layout_width="match_parent"
					  android:layout_height="match_parent"
					  android:gravity="center"
					  android:layout_marginTop="13dp"
					  android:layout_marginBottom="13dp"
			>
				<TextView
					android:background="@drawable/stats_text"
					android:textSize="24sp"
					android:text="@string/graph_stats_refuelings"
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:textAlignment="center"
				/>
				<Space/>
				<TextView
					android:background="@drawable/full_stats"
					android:textSize="24sp"
					android:textAlignment="center"
					android:id="@+id/stats_amount_refueling"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
			</TableRow>
			<TableRow android:layout_width="match_parent"
					  android:layout_height="match_parent"
					  android:gravity="center"
					  android:layout_marginTop="13dp"
					  android:layout_marginBottom="13dp"
			>
				<TextView
					android:background="@drawable/stats_text"
					android:textSize="24sp"
					android:text="..."
					android:layout_width="150dp"
					android:layout_height="wrap_content"
					android:textAlignment="center"
				/>
				<Space android:layout_width="20pt"/>
				<TextView
					android:background="@drawable/full_stats"
					android:textSize="24sp"
					android:textAlignment="center"
					android:id="@+id/stats"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
			</TableRow>
		</TableLayout>
	</LinearLayout>
</FrameLayout>
